# AutoDRRT

./: .gitignore  README.md  README_CN.md  autoware.repos  env_set.sh  factory_scene.sh  killtask.sh  logging_simulator.sh  play_rosbag.sh  start_demo.sh  start_sensor.sh
src/aichallenge_scoring/generic_type_utility/generic_type_utility/: CMakeLists.txt  package.xml
src/aichallenge_scoring/generic_type_utility/generic_type_utility/include/generic_type_utility/: generic_message.hpp  generic_property.hpp
src/aichallenge_scoring/generic_type_utility/generic_type_utility/src/: generic_message.cpp  generic_property.cpp
src/aichallenge_scoring/generic_type_utility/generic_type_utility/test/: test.cpp
src/aichallenge_scoring/multi_data_monitor/multi_data_monitor/: CMakeLists.txt  README.md  package.xml
src/aichallenge_scoring/multi_data_monitor/multi_data_monitor/config/: aichallenge_multi_data_monitor_config.yaml
src/aichallenge_scoring/multi_data_monitor/multi_data_monitor/css/: colors.css
src/aichallenge_scoring/multi_data_monitor/multi_data_monitor/plugins/: builtins.xml  rviz.xml
src/aichallenge_scoring/multi_data_monitor/multi_data_monitor/scripts/: example
src/aichallenge_scoring/multi_data_monitor/multi_data_monitor/test/: test.cpp  test.yaml
src/autodrrt.application/localization/yabloc/yabloc_image_processing/: CMakeLists.txt
src/autodrrt.application/perception/autodrrt.perception/ros2_bevdet/: 1  2  CMakeLists.txt  CMakeLists_bk.txt  README.md  bevdet_ros2.cpp  bevdet_ros2_lidar.cpp  demo_bevdet.cpp  package.xml
src/autodrrt.application/perception/autodrrt.perception/ros2_bevfusion/: .README.md.swp  CMakeLists.txt  configure.yaml  demo_bevdet.cpp  package.xml
src/autodrrt.application/planning/behavior_path_avoidance_module/: CMakeLists.txt  package.xml
src/autodrrt.application/planning/behavior_path_avoidance_module/config/: avoidance.param.yaml
src/autodrrt.computing/realtime/gpudirect-dds/: CMakeLists.txt  README.md  package.xml
src/autodrrt.computing/realtime/gpudirect-dds/install/: local_setup.sh  setup.sh  setup.zsh
src/autodrrt.computing/realtime/gpudirect-dds/src/: listener_component.cpp  talker_component.cpp
src/autodrrt.core/common/autoware_adapi_msgs/autoware_adapi_v1_msgs/: CMakeLists.txt  README.md  package.xml
src/autodrrt.core/common/autoware_msgs/autoware_perception_msgs/: CMakeLists.txt  README.md  package.xml
src/autodrrt.core/common/autoware_msgs/autoware_sensing_msgs/: CMakeLists.txt
src/autodrrt.core/common/autoware_msgs/autoware_system_msgs/: CMakeLists.txt  package.xml
src/autodrrt.core/common/autoware_msgs/autoware_vehicle_msgs/: CMakeLists.txt  package.xml
src/autodrrt.core/dma_transfer/dma_transfer/: CMakeLists.txt  r  setpci
src/autodrrt.core/dma_transfer/dma_transfer/include/: demo_node.hpp  dma_adapter.hpp
src/autodrrt.core/dma_transfer/dma_transfer/install/: local_setup.sh  setup.ps1  setup.sh
src/autodrrt.core/dma_transfer/dma_transfer/src/: send.cpp
src/autodrrt.driver/can/aion_interface/: CMakeLists.txt  package.xml
src/autodrrt.driver/can/aion_interface/launch/: aion_interface_node.launch.xml
src/autodrrt.driver/can/aion_interface/src/: aion_interface.cpp  aion_interface_node.cpp
src/autodrrt.driver/can/can_interface_custom/: CMakeLists.txt  package.xml
src/autodrrt.driver/can/can_interface_custom/launch/: aion_interface_node.launch.xml
src/autodrrt.driver/can/can_interface_custom/src/: aion_interface.cpp  aion_interface_node.cpp  manauto.cpp
src/autodrrt.driver/hil/src/carla_vehicle_can/: CMakeLists.txt  README.md  package.xml
src/autodrrt.driver/hil/src/cgi430_can_driver/: CMakeLists.txt  package.xml
src/autodrrt.driver/imu/cgi610_driver/: CMakeLists.txt  package.xml
src/autodrrt.driver/imu/cgi610_driver/launch/: cgi610_driver.launch
src/autodrrt.driver/imu/cgi610_driver/src/: cgi610_driver_core.cpp  cgi610_driver_node.cpp
src/autodrrt.driver/radar/ARS408_driver/: CMakeLists.txt  package.xml
src/autodrrt.driver/radar/ARS408_driver/launch/: ARS408_CAN_node.launch.xml
src/autodrrt.driver/radar/ARS408_driver/lib/: ControlCAN.lib
src/autodrrt.driver/radar/ARS408_driver/src/: ARS408_CAN_core.cpp  ARS408_CAN_node.cpp
src/autodrrt.tools/Nodev2x/v2x_node/: CMakeLists.txt  package.xml
src/autodrrt.tools/Nodev2x/v2x_node/include/: costumer_serialization_msg.hpp
src/autodrrt.tools/Nodev2x/v2x_node/src/: recv.cpp
src/autodrrt.tools/auto_annotation/src/lidar_saver/: CMakeLists.txt
src/autodrrt.tools/multi_lidar_calibration/: CMakeLists.txt
src/autodrrt.tools/multi_lidar_calibration/cfg/: child_topic_list
src/autodrrt.tools/multi_lidar_calibration/include/multi_lidar_calibration/: multi_lidar_calibration.hpp
src/autodrrt.tools/multi_lidar_calibration/launch/: multi_lidar_calibration.launch.xml
src/autodrrt.tools/multi_lidar_calibration/src/: multi_lidar_calibration.cpp  multi_lidar_calibration_node.cpp
src/core/autoware_adapi_msgs/autoware_adapi_v1_msgs/: CMakeLists.txt  README.md  package.xml
src/core/autoware_msgs/autoware_localization_msgs/: CMakeLists.txt  package.xml
src/core/autoware_msgs/autoware_localization_msgs/msg/: KinematicState.msg
src/core/autoware_msgs/autoware_perception_msgs/: CMakeLists.txt  README.md  package.xml
src/core/autoware_msgs/autoware_perception_msgs/msg/: TrafficLight.msg  TrafficLightArray.msg  TrafficLightElement.msg  TrafficSignal.msg  TrafficSignalArray.msg
src/universe/autoware.universe/perception/occupancy_grid_map_outlier_filter/: CMakeLists.txt
src/vehicle/golfcart_description/golfcart_description/: CMakeLists.txt  package.xml
src/vehicle/golfcart_description/golfcart_description/config/: simulator_model.param.yaml  vehicle_info.param.yaml
src/vehicle/golfcart_description/golfcart_description/mesh/: golfcart.dae
src/vehicle/golfcart_description/golfcart_description/urdf/: vehicle.xacro
src/vehicle/golfcart_description/golfcart_launch/: CMakeLists.txt  package.xml
src/vehicle/golfcart_description/golfcart_launch/launch/: vehicle_interface.launch.xml
(+1134 files in other folders)
