<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_bevdet</name>
  <version>1.0.0</version>
  <description>Examples of minimal publisher/subscriber using rclcpp</description>
  <maintainer email="you@email.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>autoware_auto_perception_msgs</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_conversions</depend>
  <!-- <depend>torch</depend> -->
  <depend>message_filters</depend>
  <depend>ament_index_cpp</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
